# deriv-hackathon

./: .gitignore  pyproject.toml  translate.py
docs/superpowers/specs/: 2026-04-24-deriv-translation-pipeline-design.md
pipeline/: config.py  extract.py  llm.py  logging_utils.py  qa.py  report.py  terms.py  translate.py
research/: deriv_homepage_fetch.md
